--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>Simon Lawrence</title>
+	<link rel="stylesheet" href="css/normalise.css">
+	<link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+	<header>
+	  <h1>Hello world</h1>
+	</header>
+</body>
+</html>
