Add some words etc

--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+<body class="splash">
 	<header>
-	  <h1>Hello world</h1>
+	  <h1>Hello,</h1>
 	</header>
+  <section>
+    <p>
+			I’m a full-stack, polyglot web developer living and working in Europe.
+			You can <a href="https://github.com/silawrenc">see some code I&rsquo;ve written</a> over on Github, peruse my <a href="/cv">CV</a>, or <a href="mailto:hello@simonlawrence.xyz">get in touch</a>.
+    </p>
+  </section>
 </body>
 </html>
