More of the same

--- a/index.html
+++ b/index.html
@@ -4,117 +4,131 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Simon Lawrence</title>
 
-  <style>
-  @font-face{
-    font-family: 'sofia';
-    src: url('./fonts/sofia/black.eot');
-    src: url('./fonts/sofia/black.eot?#iefix') format('embedded-opentype'),
-         url('./fonts/sofia/black.woff') format('woff'),
-         url('./fonts/sofia/black.ttf') format('truetype'),
-         url('./fonts/sofia/black.svg#webfont') format('svg');
-    font-style: normal;
-    font-weight: 900;
-  }
-
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    border: none;
-  }
-
-  html {
-    font-size: 14px;
-    font-family: sofia;
-    color: white;
-    color: rgba(255,255,255,0.7);
-    line-height: 1.2;
-    -webkit-font-smoothing: antialiased;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-    background: #49BEAA;
-    background: linear-gradient(45deg, #49beaa 50%, #54c2af 50%);
-    min-height: 100%;
-    font-weight: 900;
-    letter-spacing: 0.05em;
-  }
-
-  body {
-    padding: 2em;
-    padding-top: 10vh;
-    margin: 0 auto;
-    max-width: 40em;
-  }
-
-  body > * {
-    font-size: 2.5em;
-  }
-
-  em {
-    font-style: normal;
-    color: #4A4A5A;
-  }
-
-  hr {
-    border-top: 0.15em solid;
-    margin: 0.5em 0;
-  }
-
-  ul {
-    list-style: none;
-    line-height: 1.3em;
-  }
-
-  a {
-    text-decoration: none;
-    background-color: transparent;
-    outline: none;
-    color: inherit;
-    position: relative;
-  }
-
-  a:focus {
-    color: #4A4A5A;
-  }
-
-  a:before, a::before {
-    content: '-';
-    position: absolute;
-    left: -0.6em;
-  }
-
-  a:after, a::after {
-    content: '';
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    left: 0;
-    bottom: 0;
-    border-bottom: 0.15em solid;
-  }
-
-  @media (min-width: 40em) {
-    html {
-      font-size: 18px;
-    }
-
-    body {
-      padding: 4em;
-      padding-top: 18vh;
-    }
-  }
-  </style>
+  <title>CV - Simon Lawrence</title>
+  <link rel="icon" type="image/png" href="./favicon.png">
+  <link rel="stylesheet" href="./css.css">
 </head>
 
 <body>
-    <p>Simon Lawr&shy;ence is a <em>full stack</em>, <em>poly&shy;glot</em> web devel&shy;oper living in Barcelona.</p>
-    <hr>
-    <ul>
-      <li><a href="./cv">CV</a></li>
-      <li><a href="https://github.com/silawrenc">GitHub</a></li>
-      <li><a href="mailto:hello@simonlawrence.xyz">contact</a></li>
-    </ul>
+
+<header>
+  <h1>Simon
+  Lawr&shy;ence</h1>
+  <a href="mailto:hello@simonlawrence.xyz">hello@simonlawrence.xyz</a>
+  <a href="https://www.github.com/silawrenc" title="GitHub" aria-label="GitHub profile"></a>
+</header>
+
+<section>
+	<h2>Work</h2>
+
+  <h3>Software engineer &mdash; 2017&ndash;present
+    <a href="https://www.intellisense.io">intellisense.io</a></h3>
+
+  <p>
+    I currently work as a software engineer and scrum master.
+    As the former I am responsible for delivering a sophisticated modelling and optimisation platform to the mining industry, leveraging machine learning and physical modelling techniques within a microservice infrastructure.
+    As the latter I am leading the charge in bringing agile methodologies and best practices into a company which has previously relied on more traditional project management techniques.
+  </p>
+  <aside>
+    During 2016 I took time out to cycle, hike, and kayak through Europe, Sri Lanka, New Zealand and Australia,
+    before moving to Barcelona.
+  </aside>
+	<h3>Web technical architect &mdash; 2014&ndash;2015
+		  Web developer &mdash; 2013&ndash;2014
+    <a href="https://graze.com">graze.com</a></h3>
+
+	<p>
+		At graze I rapidly progressed from a relatively inexperienced web developer to become an authoritative voice both within the web team, and more broadly on architecture across the tech platform.
+		I worked on everything from modernising and modularising front-end javascript to re-architecting the core web application. I also contributed significantly to the devolution of the first graze microservice&mdash;the product allocation system&mdash;and eventually took over as de facto lead developer on this service.
+	</p>
+
+	<p>
+		After 13 months I was promoted to web technical architect, with technical responsibility for the web product.
+		In this role I drove forward projects to revamp the web architecture, including: rolling out a modern front-end framework; pushing for BDD and better testing; significantly improving app performance (time to first byte and server load); introducing up-to-date technologies for routing and templating.
+		My final project at graze was to investigate and road map the separation of the existing monolithic architecture into a service-based architecture. This involved analysing a sprawling codebase powering a host of interacting applications, but also considering the interrelations of the different product teams, and the potential for areas of future business expansion.
+	</p>
+
+	<aside>
+  During the winter and spring of 2013 I learnt Python (via the Django framework), HTML and CSS, and then PHP and mySQL.
+	</aside>
+
+	<h3>Research developer &mdash; Feb&ndash;Apr 2013
+    <a href="http://microco.sm">microco.sm</a></h3>
+	<p>
+		I took an unpaid position with a start-up building a forum platform and as such was the first through the door besides the two founders.
+		I was responsible for building an API-driven web application using the Django framework.
+		Crucially I received extensive exposure to the process of starting a company, and the opportunity to learn first hand from two talented, senior developers.
+	</p>
+
+	<aside>
+		In 2012, I spent 5 months working in Greece as a windsurfing and sailing instructor for Mark Warner.
+		Prior to this, I spent 10 weeks travelling through the Caribbean.
+	</aside>
+
+	<h3>Fine Art Quantitative Analyst &mdash; Apr&ndash;Dec 2011
+    Pierce Protocols</h3>
+
+	<p>
+		My role was to report on the state and prognosis of the contemporary art market. In order to achieve this, I architected a rich relational database of artworks, owners, exhibitions and sales.
+		With this I evolved statistical modelling techniques for artwork valuation and market performance which consistently forecasted auction prices more accurately than key market players.
+	</p>
+
+  <aside>
+  After graduating in 2010 I worked as a yacht skipper in Croatia, before cycling from Ecuador to Patagonia.
+	</aside>
+
+	<h3>Freelance &mdash; 2008&ndash;2013
+    Institute of Physics</h3>
+  <p>
+  	At various times I worked on publishing Supporting Physics Teaching materials online.
+  	This involved developing a Lua library for parsing custom TEX-based templates and generating both HTML and PDF editions from unified source material.
+	</p>
+</section>
+
+<section>
+  <h2>Skills</h2>
+	<h3>Academic</h3>
+	<dl>
+		<dt>1st</dt>
+		<dd>MMath First Class Honours in Mathematics, Oxford University</dd>
+		<dt>1st</dt>
+		<dd>BA First Class Honours in Mathematics, Oxford University</dd>
+  <dt>*</dt>
+  <dd>Charles Caine Prize, St Peter’s College, Oxford for exceptional performance in final examinations</dd>
+		<dt>A</dt>
+		<dd>A level Maths, Further Maths, French, and Physics at A grade</dd>
+		<dt>A</dt>
+		<dd>12 GCSEs including English and Maths&mdash;9 at A* and 3 at A grade</dd>
+	</dl>
+
+	<h3>Competencies</h3>
+	<ul>
+    <li>Software architecture and design</li>
+    <li>Agile methodology and scrum coaching</li>
+    <li>Testing methodologies</li>
+    <li>OOP</li>
+    <li>Functional and reactive programming</li>
+		<li>Continuous deployment</li>
+		<li>Web standards and accessibility</li>
+	</ul>
+
+	<h3>Technologies</h3>
+	<ul>
+		<li>HTML5</li>
+		<li>CSS3 + preprocessors</li>
+		<li>Javascript</li>
+		<li>ES6</li>
+		<li>Babel</li>
+    <li>Node.js</li>
+    <li>MongoDB</li>
+		<li>PHP</li>
+		<li>Erlang</li>
+    <li>Docker</li>
+    <li>RDBMS</li>
+    <li>Git</li>
+	</ul>
+</section>
+
 </body>
 </html>
