--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
   <title>CV - Simon Lawrence</title>
-  <link rel="icon" type="image/png" href="./favicon.png">
   <link rel="stylesheet" href="./css.css">
 </head>
 
@@ -16,19 +15,25 @@
   <h1>Simon
   Lawr&shy;ence</h1>
   <a href="mailto:hello@simonlawrence.xyz">hello@simonlawrence.xyz</a>
-  <a href="https://www.github.com/silawrenc" title="GitHub" aria-label="GitHub profile"></a>
 </header>
 
 <section>
 	<h2>Work</h2>
 
-  <h3>Software engineer &mdash; 2017&ndash;present
+  <h3>Software developer &mdash; 2017 &ndash; present
+    <a href="https://www.nearform.com">nearForm</a></h3>
+
+  <p>
+    With nearForm I deliver best-practice Node.js solutions and consulting to a range of clients, as well as working on open source initiatives.
+  </p>
+
+  <h3>Software engineer &mdash; Mar&ndash;Aug 2017
     <a href="https://www.intellisense.io">intellisense.io</a></h3>
 
   <p>
-    I currently work as a software engineer and scrum master.
-    As the former I am responsible for delivering a sophisticated modelling and optimisation platform to the mining industry, leveraging machine learning and physical modelling techniques within a microservice infrastructure.
-    As the latter I am leading the charge in bringing agile methodologies and best practices into a company which has previously relied on more traditional project management techniques.
+    At IntelliSense I held the roles of software engineer and scrum master.
+    As the former I was responsible for delivering a sophisticated modelling and optimisation platform to the mining industry, leveraging machine learning and physical modelling techniques within a microservice infrastructure.
+    As the latter I was leading the charge in bringing agile methodologies and best practices into a company which has previously relied on more traditional project management techniques.
   </p>
   <aside>
     During 2016 I took time out to cycle, hike, and kayak through Europe, Sri Lanka, New Zealand and Australia,
