--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <title>Wedding of Simon and Caroline</title>
     <link rel="stylesheet" href="./css.css" />
+    <link rel="icon" class="js-site-favicon" type="image/png" href="./favicon.png">
   </head>
 
   <body>
