update covid info

--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
 
         <h4>Covid restrictions</h4>
         <p>
-          If you are arriving from overseas you currently need to fill in a
+          You can check current requirements for entering Spain on the
           <a target="_blank" rel="noreferrer" href="https://www.spth.gob.es/"
-            >passenger locator form</a
+            >SpTH site</a
           >. You must wear a mask on public transport, in taxis, and in
           healthcare settings (hospitals, pharmacies, <i>etc</i>).
         </p>
