--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li>Cloud native architectures</li>
         <li>React ecosystem</li>
         <li>Design systems and scaled front-end architectures</li>
-        <li>Full stack javascript</li>
+        <li>Full stack JavaScript</li>
         <li>Usability and accessibility</li>
         <li>GDPR compliance and data security</li>
         <li>CI/CD</li>
